--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,3 +17,17 @@
 .App-link {
   color: #61dafb;
 }
+
+/* .img-container {
+  width: 100%;
+  height: 200px; /* Ajusta la altura según tus necesidades */
+  overflow: hidden;
+}
+
+.custom-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+
+
