--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,7 +20,7 @@
 
 /* .img-container {
   width: 100%;
-  height: 200px; /* Ajusta la altura según tus necesidades */
+  height: 200px; /* Ajusta la altura según tus necesidades 
   overflow: hidden;
 }
 
