--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -32,9 +32,10 @@
 }
 
 .footer {
+    width: 100%;
     background-color: #222;
     color: #ccc;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
 }
 
