--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -35,8 +35,13 @@
     width: 100%;
     background-color: #222;
     color: #ccc;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 0;
+    padding-right: 0;
     text-align: center;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .footer .social-media {
